--- a/blogger/app/views/articles/show.html.erb
+++ b/blogger/app/views/articles/show.html.erb
@@ -21,8 +21,10 @@ Tags:
 
 <%= render partial: 'comments/form' %>
 
-<%= link_to "<< Back to Article List", articles_path %>
 
-<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
+<% if logged_in? %>
+	<%= link_to "<< Back to Article List", articles_path %>
+	<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
+	<%= link_to "edit", edit_article_path(@article) %>
+<% end %>
 
-<%= link_to "edit", edit_article_path(@article) %>
